Fix css collapse bug in users#edit

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -49,7 +49,7 @@ $d-gray: hsl(0,0%,80%);
 .confirm {
 
   .collapse {
-    padding-top:10px;
+
   }
 
   input:nth-of-type(2) {
@@ -61,7 +61,8 @@ $d-gray: hsl(0,0%,80%);
   }
 
   .btn {
-    margin-top:10px;
+    // margin-top:10px;
+    margin-bottom:10px;
     width:100%;
   }
 }
